fix issue with notifee email not showing
- fixed issue where notify emails would show up blank

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -102,6 +102,7 @@ html, body
 
 .option
 {
+    color: white;
     display: inline-block;
     height: 35px;
     vertical-align: center;
@@ -109,6 +110,7 @@ html, body
 
 .option.left
 {
+    float: left;
     text-align: left;
     border-right: 2px solid #fff;
 }
@@ -116,10 +118,8 @@ html, body
 .option.right
 {
     float: right;
-    color: white;
     text-align: right;
     border-left: 2px solid #fff;
-    padding-left: 20px;
 }
 
 .content
